[package]
name = "fstab"
version = "0.4.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
description = "An fstab parser and modifier"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/fstab"
repository = "https://github.com/cholcombe973/fstab"
homepage = "https://github.com/cholcombe973/fstab"

[dependencies]
log = "~0.4"
